Satellite page are kinda done.

--- a/Cloudents.Web/ClientApp/components/home/search.less
+++ b/Cloudents.Web/ClientApp/components/home/search.less
@@ -75,7 +75,7 @@
 
 .box-search {
     max-width: 800px;
-    flex-grow: 1;
+    flex-grow: 2; //override spacer
     .inTheMiddle();
 
     .f-submit {
