--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -9,7 +9,7 @@
 @color-purple: #8c3fbf;
 @color-dark-purple: #320161;
 
-
+/*
 @color-pink-gradient: fade(#f14d4d, 15%);
 @color-purple-gradient: fade(@color-purple, 15%);
 @color-green-gradient: fade(@color-green, 15%);
@@ -22,7 +22,7 @@
     background: -moz-linear-gradient(top, @startColor, @endColor);
     background: -ms-linear-gradient(top, @startColor, @endColor);
     background: -o-linear-gradient(top, @startColor, @endColor);
-}
+}*/
 
 
 
