--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -37,20 +37,23 @@
 }
 
 .websites-section {
-    background-image: linear-gradient(to bottom, #ffffff, rgba(182,215,250,0.5));
+    background-image: linear-gradient(to bottom, #ffffff, #DBEBFC);
 
-    h2 {
-        font-size: 16px;
-        font-weight: normal;
-    }
 
-    p {
+    h2, p {
         padding: 0 32px;
+        font-weight: normal;
+        font-size: 16px;
+        color: #4a4a4a;
     }
 
     .site img {
         .responsive-property(padding-top, 16px, null, 20px);
         .responsive-property(padding-bottom, 16px, null, 20px);
+    }
+
+    .logos {
+        min-height: 128px;
     }
 }
 
@@ -215,7 +218,7 @@ footer {
     }
 
     .social-icon {
-        fill:#fff;
+        fill: #fff;
     }
 }
 
