--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -13,7 +13,11 @@
 
 @marginTop: 42px;
 .main-section {
-    min-width: 0
+    min-width: 0;
+    margin-top: @marginTop;
+    @media(max-width: @screen-xs){
+        margin-top: 0
+    }
 }
 .sec-result {
     max-width: 504px;
