--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -1,6 +1,7 @@
 ﻿.s-main-page {
     height: 100%;
-    background-image: linear-gradient(to top, #9ccdff, #f0f0f0);
+    background:#f0f0f0;
+    //background-image: linear-gradient(to top, #9ccdff, #f0f0f0);
     .wrapper {
         max-width: 800px;
         margin: 32px auto 0;
