--- a/Cloudents.Web/ClientApp/components/home/features.less
+++ b/Cloudents.Web/ClientApp/components/home/features.less
@@ -12,7 +12,8 @@
         max-width: 272px;
 
         .icon-wrapper {
-            .responsive-property(height, 100px,null,40px);
+            .responsive-property(min-height, 100px,null,40px);
+
         }
 
         svg {
