--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -168,6 +168,7 @@
                     height: 12px;
                     background: #bbbbbb;
                     opacity: 0.8;
+                    z-index: -1;
                 }
 
                 .checkmark:after {
