--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -44,7 +44,7 @@
         padding: 0 32px;
         font-weight: normal;
         font-size: 16px;
-        color: #4a4a4a;
+        color: @color-grey;
     }
 
     .site img {
@@ -135,6 +135,7 @@
         letter-spacing: -0.4px;
         line-height: 33px;
         padding: 0 0 22px 0;
+        color:  @color-grey;
     }
 
     .author {
@@ -166,7 +167,7 @@ footer {
 
     .footer-content {
         margin: 0 auto;
-        .responsive-property(max-width, 952px, null, null);
+        .responsive-property(max-width, 952px, 796px, null);
         .responsive-property(padding-right, 32px, 8px, 8px);
         .responsive-property(padding-left, 32px, 8px, 8px);
 
