--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -1,21 +1,33 @@
 ﻿.s-main-page {
     height: 100%;
-    background:#f0f0f0;
+    background: #f0f0f0;
     //background-image: linear-gradient(to top, #9ccdff, #f0f0f0);
     .wrapper {
         max-width: 800px;
-        margin: 32px auto 0;
-        
+        margin: 24px auto 0;
     }
+
     .image-section {
         position: relative;
         height: 280px;
     }
+
     .h-icon {
         position: absolute;
-        left:0;
+        left: 0;
         right: 0;
         margin: 0 auto;
         transform: translate(0, -50%);
     }
+}
+
+.contact, .reps, .partner {
+        font-size: 18px;
+        line-height: 30px;
+        letter-spacing: -0.2px;
+        color: #302eb5;
+        max-width: 610px;
+        margin-top: -8px;
+        margin: 0 auto;
+    
 }
