--- a/Cloudents.Web/ClientApp/components/satellite/term.less
+++ b/Cloudents.Web/ClientApp/components/satellite/term.less
@@ -1,13 +1,16 @@
 .term {
+    margin: 0 auto;
+    margin-top: 30px;
+    max-width: 780px;
+    font-size: 18px;
+    line-height: 1.67;
+    letter-spacing: -0.2px;
+
     h2 {
         font-size: 24px;
-        color:#302eb5;
+        color: #302eb5;
+        line-height: 32px;
+        letter-spacing: -0.2px;
+        font-weight: normal;
     }
-    margin: 0 auto;
-    margin-top: 24px;
-    
-    max-width: 800px;
-    font-size:18px;
-    line-height: 30px;
-    letter-spacing: -0.3px;
 }
