--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -67,6 +67,16 @@
     .course-empty-state {
         text-align: center;
 
+        @media(max-width: @screen-xs) {
+            padding: 14px 8px 20px 8px;
+
+            .text {
+                font-size: 18px;
+                letter-spacing: -0.3px;
+                padding: 0 36px 24px 36px;
+            }
+        }
+
         .btn:not(.btn--icon):not(.btn--flat) {
             background-color: @color-blue;
             color: white;
@@ -75,6 +85,24 @@
             border-radius: 4px;
             margin: 8px auto;
             text-transform: capitalize;
+        }
+
+        .mobile-button {
+            background: #eeeeee;
+            color: #9b9b9b;
+            width: 100%;
+            height: 48px;
+            font-size: 20px;
+            border-radius: 4px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            letter-spacing: -0.5px;
+
+            .sbf-search {
+                font-size: 22px;
+                margin: 0 12px 0 8px;
+            }
         }
     }
 
