--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -25,7 +25,7 @@
     min-width: 0;
 
     @media(max-width: @screen-xs) {
-        margin-top: 0;
+        margin: 0 8px;
     }
     //margin-top: @spaceFromTop;
     .result-cell {
