--- a/Cloudents.Web/ClientApp/components/settings/ResultPersonalize.less
+++ b/Cloudents.Web/ClientApp/components/settings/ResultPersonalize.less
@@ -37,7 +37,7 @@
             padding: 4px 12px;
 
             input {
-                .responsive-property(font-size, 16px, null, 20px);
+                font-size: 16px;
             }
 
             .sbf-search {
