--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -1,4 +1,6 @@
-﻿.s-main-page {
+﻿@import "../../mixin.less";
+
+.s-main-page {
     height: 100%;
     background: #f0f0f0;
     //background-image: linear-gradient(to top, #9ccdff, #f0f0f0);
@@ -10,6 +12,11 @@
     .image-section {
         position: relative;
         height: 280px;
+
+        @media(max-width: @screen-xs) {
+            margin-top: 24px;
+            height: auto;
+        }
     }
 
     .h-icon {
@@ -18,16 +25,29 @@
         right: 0;
         margin: 0 auto;
         transform: translate(0, -50%);
+
+        @media(max-width: @screen-xs) {
+            transform: none;
+            position: static;
+            width: 120px;
+        }
     }
 }
 
 .contact, .reps, .partner {
-        font-size: 18px;
-        line-height: 30px;
-        letter-spacing: -0.2px;
-        color: #302eb5;
-        max-width: 610px;
-        margin-top: -8px;
-        margin: 0 auto;
-    
+    line-height: 30px;
+    letter-spacing: -0.2px;
+    text-align: left;
+    color: #302eb5;
+    max-width: 610px;
+    margin-top: -8px;
+    margin: 0 auto;
+}
+
+.content--wrap {
+    .responsive-property(font-size, 18px, null, 16px);
+
+    @media(max-width: @screen-sm) {
+        margin: 0 8px;
+    }
 }
