Fixes of food cell and iframe

--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -44,10 +44,13 @@
         margin-bottom: 4px;
     }
 
+    .imageWrapper(96px,120px,39px);
+
     .img-wrap {
         .flexSameSize();
         border-radius: 4px;
         overflow: hidden;
+        border: 1px solid #2cbfa5;
     }
 
     @media(max-width: @screen-xs) {
