--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -47,12 +47,14 @@
         button:focus {
             outline: none;
         }
-
+        .icon{
+            transition: none;
+        }
         .sbf-arrow-button {
             transform: rotate(-90deg);
-            color: white;
-            font-size: 10px;
-            margin-top: -7px;
+            color: #9b9b9b;
+            font-size: 12px;
+            margin-top: 0;
         }
 
         .sbf-close {
