satellite pages design fixes

--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -19,6 +19,11 @@
         position: relative;
         height: 280px;
 
+        .image {
+            height: 158px;
+            background-position-x: center;
+        }
+
         @media(max-width: @screen-xs) {
             margin-top: 24px;
             height: auto;
