--- a/Cloudents.Web/ClientApp/components/satellite/work.less
+++ b/Cloudents.Web/ClientApp/components/satellite/work.less
@@ -4,6 +4,10 @@
     color: #302eb5;
     .responsive-property(margin-top, 52px, null, 36px);
 
+    @media(max-width: @screen-xs) {
+        padding: 0 8px;
+    }
+
     .strip {
         .responsive-property(margin-bottom, 106px, null, 42px);
 
@@ -13,10 +17,6 @@
 
         img {
             max-width: 100%;
-
-            @media(max-width: @screen-xs) {
-                padding: 0 8px;
-            }
         }
 
         .gap {
@@ -25,7 +25,7 @@
         }
 
         .text {
-            max-width: 344px;
+            .responsive-property( max-width, 350px, null, 100%);
 
             h2 {
                 .responsive-property(font-size, 24px, null, 18px);
