fixed margin in terms and in privacy

--- a/Cloudents.Web/ClientApp/components/satellite/term.less
+++ b/Cloudents.Web/ClientApp/components/satellite/term.less
@@ -3,6 +3,7 @@
 .term {
     margin: 0 auto;
     margin-top: 30px;
+    width: ~"calc(100% - 16px)";
     max-width: 780px;
     line-height: 1.67;
     letter-spacing: -0.2px;
@@ -14,4 +15,5 @@
         letter-spacing: -0.2px;
         font-weight: normal;
     }
+
 }
