--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -47,9 +47,11 @@
         button:focus {
             outline: none;
         }
-        .icon{
+
+        .icon {
             transition: none;
         }
+
         .sbf-arrow-button {
             transform: rotate(-90deg);
             color: #9b9b9b;
@@ -349,7 +351,7 @@
                 .responsive-property(padding-left, 8px, null, 0);
                 .responsive-property(padding-right, 8px, null, 0);
 
-                label{
+                label {
                     width: 100%;
                 }
 
@@ -511,6 +513,21 @@
                 line-height: 24px;
                 margin-top: 60px;
                 letter-spacing: -0.8px;
+            }
+
+            .course-empty-state {
+                margin: 20px auto 0 auto;
+                text-align: center;
+                font-size: 18px;
+                line-height: 1.33;
+                letter-spacing: -0.7px;
+
+                @media(max-width: @screen-xs) {
+                    margin-top: 14px;
+                    font-size: 16px;
+                    line-height: 1.5;
+                    letter-spacing: -0.6px;
+                }
             }
         }
 
