--- a/Cloudents.Web/ClientApp/components/book/header.less
+++ b/Cloudents.Web/ClientApp/components/book/header.less
@@ -13,7 +13,7 @@
             margin-left: 2px;
         }
 
-        .btn {
+        .back.btn {
             &:first-child {
                 @media(max-width: @screen-xs) {
                     margin-left: 0;
