Fixed arrows position and sizes

--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -301,9 +301,9 @@
             .back.btn {
                 margin-left: 2px;
 
-                .sbf-arrow-button {
-                    transform: rotate(-90deg);
-                    font-size: 12px;
+                .sbf-chevron-down {
+                    transform: rotate(90deg);
+                    font-size: 38px;
                     color: #9b9b9b;
                 }
             }
